<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    android:id="@+id/activity_title_screen" >

    <TextView
        android:id="@+id/title_000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:textSize="35sp"
        android:text="@string/app_title_000" />

    <Button
        android:id="@+id/button_00"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="125dp"
        android:textSize="20sp"
        android:onClick="onProceed"
        android:text="@string/app_prompt" />

    <Button
        android:id="@+id/button_01"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:onClick="onKotlinProceed"
        android:text="@string/app_kotlin" />

    <!-- <TextView
        android:id="@+id/title_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:textSize="25sp"
        android:text="@string/app_prompt" /> -->

</LinearLayout>
